Add JWT auth
Change api_spec.yaml (again)
